--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@
     <title>Fork Me! FCC: Test Suite Template</title>
     <link rel="stylesheet" href="css/style.css">
   </head>
-  
 
   <body>
-    <h1>hello world!</h1>
+   <h1>Hello World, we are software developers!</h1>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
     <!--
